syntax = "proto3";

package api.opspillar.v1;

option go_package = "opspillar/api/opspillar/v1;v1";
option java_multiple_files = true;
option java_package = "api.opspillar.v1";

import "google/api/annotations.proto";



// gratos::model
message Tag {
	uint32 id = 1;
	string key = 2;
	string value = 3;
	string description = 4;
}

service Tags {
	rpc CreateTags (CreateTagsRequest) returns (CreateTagsReply){
		option (google.api.http) = {
			post: "/api/v1/tags/create"
			body: "*"
		};
	};
	rpc UpdateTags (UpdateTagsRequest) returns (UpdateTagsReply){
		option (google.api.http) = {
			post: "/api/v1/tags/update"
			body: "*"
		};
	};
	rpc DeleteTags (DeleteTagsRequest) returns (DeleteTagsReply){
		option (google.api.http) = {
			post: "/api/v1/tags/delete"
			body: "*"
		};
	};
	rpc GetTags (GetTagsRequest) returns (GetTagsReply){
		option (google.api.http) = {
			get: "/api/v1/tags/{id}"
		};
	};
	rpc ListTags (ListTagsRequest) returns (ListTagsReply){
		option (google.api.http) = {
			post: "/api/v1/tags/list"
			body: "*"
		};
	};
}

message CreateTagsRequest {
	repeated Tag tags = 1;
}
message CreateTagsReply {
	string message = 1;
	int32 code = 2;
	string action = 3;
}

message UpdateTagsRequest {
	repeated Tag tags = 1;
}
message UpdateTagsReply {
	string message = 1;
	int32 code = 2;
	string action = 3;
}

message DeleteTagsRequest {
	repeated uint32 ids = 1;
}

message DeleteTagsReply {
	string message = 1;
	int32 code = 2;
	string action = 3;
}

message GetTagsRequest {
	uint32 id = 1;
}

message GetTagsReply {
	string message = 1;
	int32 code = 2;
	string action = 3;
	Tag tag = 4;
}


message ListTagsRequest {
	uint32 page = 1;
	uint32 page_size = 2;
	repeated string keys = 3;
	repeated string kvs = 4;
	repeated uint32 ids = 5;
}

message ListTagsReply {
	string message = 1;
	int32 code = 2;
	string action = 3;
	repeated Tag tags = 4;
}